--- a/index.html
+++ b/index.html
@@ -179,13 +179,13 @@
 
     <section>
       <h2>Écoles</h2>
-      <div class="schools-grid">
-        <!-- Votre base (conservée) -->
-        <div class="school-item">École Polytechnique</div>
+      <div class="schools-grid"> 
+        <!-- Votre base (conservée) --> 
+        <a href="https://www.polytechnique.edu" class="school-item" target="_blank" rel="noopener noreferrer"> Polytechnique</a>
         <div class="school-item">ENS</div>
-        <div class="school-item">Mines Paris - PSL</div>
-        <div class="school-item">Ponts ParisTech</div>
-        <div class="school-item">CentraleSupélec</div>
+        <a href="https://www.minesparis.psl.eu/fr/home/" class="school-item" target="_blank" rel="noopener noreferrer"> Mine Paris</a>
+        <a href="https://ecoledesponts.fr" class="school-item" target="_blank" rel="noopener noreferrer"> Ponts ParisTech</a>
+        <a href="https://www.centralesupelec.fr" class="school-item" target="_blank" rel="noopener noreferrer">CentraleSupeléc</a>
         <a href="https://www.telecom-paris.fr" class="school-item" target="_blank" rel="noopener noreferrer">Télécom Paris</a>
         <a href="https://www.ensae.fr" class="school-item" target="_blank" rel="noopener noreferrer">ENSAE Paris</a>
 
